--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # Test binary, built with `go test -c`
 *.test
 
+# binary
+app
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
