Added okteto yaml with job
Signed-off-by: Mario Nevado <nevado.mario@gmail.com>

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,7 @@ FROM golang:1.23-bookworm
 COPY --from=okteto-cli /usr/local/bin/okteto /usr/local/bin/okteto
 
 WORKDIR /app
-COPY app .
+COPY . .
 
 RUN go build -o /usr/local/bin/app
 
